# davidalsh.com

./: .foxy-ci.yml  .gitignore  @build.sh  @upload.sh  GRUNTFILE.js  build.sh  jsonpen.json  jsonpen.json.default  makefile  package-lock.json  package.json  pnpm-workspace.yaml  rspress.config.ts  tscommand-3aa77f9a.tmp.txt  tsconfig.json  webpack.config.js
.circleci/: .env  config.yml
.github/: deploy.bash
.github/deployment/: package.json  tsconfig.json
.github/scripts/: jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy.yaml  deploy.yml  install-nodejs.bash
docs/: index.css  index.mdx
docs/articles/2023-12-14-how-fast-can-you-bundle-part-1/sources/multi-threaded-transformer/: Cargo.toml
posts/2019-03-12-solid-typescript/: meta.yaml
posts/2019-03-18-go-gin-rest-api/: meta.yaml  readme.md
posts/2022-07-08-web-assembly/: meta.yaml  readme.md
posts/2022-07-18-script-sandbox/: meta.yaml  readme.md
posts/2023-12-14-how-fast-can-you-bundle-part-1/: draft.md  meta.yaml  readme.md
private/: about-me.html
private/scripts/: script.ts
public/: bundle.js  index.html
scripts/: index.ts  paths.ts  tsconfig.json
src/: cache-control.yml  index.ejs  index.html  index.scss  index.ts  index.tsx  style.scss  styles.scss
static-site-generator/: package.json  tsconfig.json
web/: 404.ejs  index.ejs  manifest.json  package.json  style.scss  test.md  tsconfig.json
website/: index.ejs  index.scss  package.json  tsconfig.json
www/: README.md  data.json  index.html  package-lock.json  package.json  webpack.config.js
(+245 files in other folders)
