[package]
name = "multi-threaded-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.9"
num_cpus = "1.16.0"
parcel-node-resolver = { path = "../vendor/parcel-node-resolver" }
parcel-transformer-js = { path = "../vendor/parcel-transformer-js" }
